Fix typo in project description in README.md
