# server.js
@@ -1,23 +1,32 @@
 const express = require('express');
-const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./swagger.json');
 
 const port = process.env.PORT || 3000;
 const app = express();
 
-app
-  .use(bodyParser.json())
-  .use((req, res, next) => {
-    res.setHeader('Access-Control-Allow-Origin', '*');
-    next();
-  })
-  .use('/', require('./routes'));
+app.use(express.json());
 
+app.use((req, res, next) => {
+  res.setHeader('Access-Control-Allow-Origin', '*');
+  res.setHeader('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept');
+  res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
+  next();
+});
+
+app.use('/', require('./routes'));
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+app.listen(port, () => {
+  console.log(`Server running on port ${port}`);
+});
+
+/* Try connecting to Mongo but don't block the server */
 mongodb.initDb((err) => {
   if (err) {
-    console.log(err);
+    console.log('MongoDB not connected yet (this is OK for now)');
   } else {
-    app.listen(port);
-    console.log(`Connected to DB and listening on ${port}`);
+    console.log('Connected to MongoDB');
   }
 });
